# UdacityRealEstateAgent

./: .env  .gitignore  HomeMatch.ipynb  README.md  clip.ipynb  pyproject.toml
backup/Original files/: ReadMe.txt
backup/listings v2/: listings.csv
backup/listings_v1/: listings.csv
chroma_db/: chroma.sqlite3
listings/metadata/: listings.json
